[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Screens/Lobby.gd" type="Script" id=1]
[ext_resource path="res://Fonts/pala.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/test_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scenes/BackButton.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 90
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 2 )

[node name="Lobby" type="Node"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 60
custom_constants/margin_top = 40
custom_constants/margin_left = 60
custom_constants/margin_bottom = 40
__meta__ = {
"_edit_lock_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 60.0
margin_top = 40.0
margin_right = 1860.0
margin_bottom = 1040.0

[node name="ModePanel" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 500.0
margin_bottom = 1000.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/ModePanel"]
margin_right = 500.0
margin_bottom = 165.0
custom_constants/margin_bottom = 30

[node name="ModeButton" type="Button" parent="MarginContainer/HBoxContainer/ModePanel/MarginContainer"]
margin_right = 400.0
margin_bottom = 135.0
rect_min_size = Vector2( 400, 135 )
size_flags_horizontal = 0
custom_fonts/font = SubResource( 1 )
custom_constants/hseparation = 0
text = "Classic"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/ModePanel"]
margin_top = 169.0
margin_right = 500.0
margin_bottom = 916.0
size_flags_vertical = 3
custom_constants/separation = 20

[node name="RankedButton" type="Button" parent="MarginContainer/HBoxContainer/ModePanel/VBoxContainer"]
margin_right = 500.0
margin_bottom = 80.0
rect_min_size = Vector2( 500, 0 )
custom_fonts/font = ExtResource( 3 )
text = "Ranked"
align = 0

[node name="QuickplayButton" type="Button" parent="MarginContainer/HBoxContainer/ModePanel/VBoxContainer"]
margin_top = 100.0
margin_right = 500.0
margin_bottom = 180.0
custom_fonts/font = ExtResource( 3 )
text = "Quickplay"
align = 0

[node name="CreateRoomButton" type="Button" parent="MarginContainer/HBoxContainer/ModePanel/VBoxContainer"]
margin_top = 200.0
margin_right = 500.0
margin_bottom = 280.0
custom_fonts/font = ExtResource( 3 )
text = "Create Room"
align = 0

[node name="JoinGameButton" type="Button" parent="MarginContainer/HBoxContainer/ModePanel/VBoxContainer"]
margin_top = 300.0
margin_right = 500.0
margin_bottom = 380.0
rect_min_size = Vector2( 500, 0 )
custom_fonts/font = ExtResource( 3 )
text = "Join Game"
align = 0

[node name="BackButton" parent="MarginContainer/HBoxContainer/ModePanel" instance=ExtResource( 4 )]

[node name="TeamPanel" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 1290.0
margin_right = 1800.0
margin_bottom = 1000.0
size_flags_horizontal = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/TeamPanel"]
margin_right = 510.0
margin_bottom = 116.0
custom_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/TeamPanel/HBoxContainer"]
margin_right = 390.0
margin_bottom = 116.0

[node name="TeamName" type="Label" parent="MarginContainer/HBoxContainer/TeamPanel/HBoxContainer/VBoxContainer"]
margin_right = 390.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 3 )
text = "Team Name"

[node name="CommanderName" type="Label" parent="MarginContainer/HBoxContainer/TeamPanel/HBoxContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 390.0
margin_bottom = 116.0
custom_fonts/font = SubResource( 2 )
text = "Commander Name"

[node name="Commander" type="ColorRect" parent="MarginContainer/HBoxContainer/TeamPanel/HBoxContainer"]
margin_left = 410.0
margin_top = 8.0
margin_right = 510.0
margin_bottom = 108.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 10
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/TeamPanel"]
margin_top = 120.0
margin_right = 510.0
margin_bottom = 990.0
custom_constants/separation = 10

[node name="Ship1" type="ColorRect" parent="MarginContainer/HBoxContainer/TeamPanel/VBoxContainer"]
margin_right = 510.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_vertical = 0

[node name="Ship2" type="ColorRect" parent="MarginContainer/HBoxContainer/TeamPanel/VBoxContainer"]
margin_top = 110.0
margin_right = 510.0
margin_bottom = 210.0
rect_min_size = Vector2( 0, 100 )
size_flags_vertical = 0

[node name="Ship3" type="ColorRect" parent="MarginContainer/HBoxContainer/TeamPanel/VBoxContainer"]
margin_top = 220.0
margin_right = 510.0
margin_bottom = 320.0
rect_min_size = Vector2( 0, 100 )
size_flags_vertical = 0

[node name="Ship4" type="ColorRect" parent="MarginContainer/HBoxContainer/TeamPanel/VBoxContainer"]
margin_top = 330.0
margin_right = 510.0
margin_bottom = 430.0
rect_min_size = Vector2( 0, 100 )
size_flags_vertical = 0

[node name="Ship5" type="ColorRect" parent="MarginContainer/HBoxContainer/TeamPanel/VBoxContainer"]
margin_top = 440.0
margin_right = 510.0
margin_bottom = 540.0
rect_min_size = Vector2( 0, 100 )
size_flags_vertical = 0

[node name="Ship6" type="ColorRect" parent="MarginContainer/HBoxContainer/TeamPanel/VBoxContainer"]
margin_top = 550.0
margin_right = 510.0
margin_bottom = 650.0
rect_min_size = Vector2( 0, 100 )
size_flags_vertical = 0
color = Color( 0.658824, 0.898039, 0.882353, 1 )

[node name="Ship7" type="ColorRect" parent="MarginContainer/HBoxContainer/TeamPanel/VBoxContainer"]
margin_top = 660.0
margin_right = 510.0
margin_bottom = 760.0
rect_min_size = Vector2( 0, 100 )
size_flags_vertical = 0
color = Color( 0.658824, 0.898039, 0.882353, 1 )

[node name="Ship8" type="ColorRect" parent="MarginContainer/HBoxContainer/TeamPanel/VBoxContainer"]
margin_top = 770.0
margin_right = 510.0
margin_bottom = 870.0
rect_min_size = Vector2( 0, 100 )
size_flags_vertical = 0
color = Color( 0.658824, 0.898039, 0.882353, 1 )

[node name="PlayerSearchTimeout" type="Timer" parent="."]
wait_time = 3.0
[connection signal="pressed" from="MarginContainer/HBoxContainer/ModePanel/VBoxContainer/QuickplayButton" to="." method="_on_Connection_pressed"]
[connection signal="timeout" from="PlayerSearchTimeout" to="." method="_on_PlayerSearchTimeout_timeout"]
